# Zygisk-Loader-Bypass

.github/workflows/: build.yml
module/: customize.sh  module.prop
src/: CMakeLists.txt  main.cpp
